--- a/sass/_administration.scss
+++ b/sass/_administration.scss
@@ -151,7 +151,7 @@
 }
 #adm_content_user, #adm_content_log, #adm_content_serial, #adm_content_show_dictionary , #adm_content_tsui{
     position: relative;
-    .add_user_description, .export_user_description{
+    .add_user_description, .export_user_description, .add_tsui_description{
         margin-top: 20px;
         cursor: pointer;
         padding: 5px;
